<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeRestockInventory"
    android:padding="@dimen/activityPadding">

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backBtn"
        android:layout_alignParentLeft="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/itemIdHint"
        android:layout_below="@id/goBackButton"
        android:id="@+id/itemIdEntry"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/quantityHint"
        android:layout_below="@id/itemIdEntry"
        android:id="@+id/quantity_entry"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restockInventoryBtn"
        android:layout_below="@id/quantity_entry"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>