<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activityPadding"
    tools:context=".EmployeeAuthenticateEmployee">

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/backBtn" />

    <EditText
        android:id="@+id/employeeIdEditTextEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goBackButton"
        android:layout_marginTop="50dp"
        android:hint="@string/adminPromoteHint" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/employeeIdEditTextEntry"
        android:layout_marginTop="40dp"
        android:hint="@string/loginMenuPasswordHint"
        android:inputType="textVisiblePassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/authenticateBtn" />
</RelativeLayout>