<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeMakeAccount"
    android:padding="@dimen/activityPadding">


    <Button
        android:id="@+id/goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backBtn"
        android:layout_alignParentLeft="true"
        />

    <EditText
        android:layout_below="@id/goBackButton"
        android:id="@+id/customerIdEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/userIdHint"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customerIdEntry"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/makeAccountBtn"/>
</RelativeLayout>